--- a/archives/toutiao-search/2024-03-18.md
+++ b/archives/toutiao-search/2024-03-18.md
@@ -1,57 +1,72 @@
 # 2024-03-18
 
-共 271 条
+共 284 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Mar 18 2024 19:00:49 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Mar 18 2024 20:09:15 GMT+0800 (China Standard Time) -->
 1. [多国领导人祝贺普京连任](https://so.toutiao.com/search?keyword=多国领导人祝贺普京连任)
 1. [外交部发言人上新](https://so.toutiao.com/search?keyword=外交部发言人上新)
 1. [1至2月份我国国民经济稳中有升](https://so.toutiao.com/search?keyword=1至2月份我国国民经济稳中有升)
 1. [淀粉肠中的鸡骨泥能给人吃吗](https://so.toutiao.com/search?keyword=淀粉肠中的鸡骨泥能给人吃吗)
-1. [普京胜选后谈台湾问题](https://so.toutiao.com/search?keyword=普京胜选后谈台湾问题)
-1. [TVB老戏骨陈狄克病逝](https://so.toutiao.com/search?keyword=TVB老戏骨陈狄克病逝)
-1. [老两口吵架 奶奶把爷爷的拐杖挪远](https://so.toutiao.com/search?keyword=老两口吵架+奶奶把爷爷的拐杖挪远)
-1. [普京：全世界都在嘲笑美国发生的事](https://so.toutiao.com/search?keyword=普京：全世界都在嘲笑美国发生的事)
+1. [带火天水麻辣烫的女孩找到了](https://so.toutiao.com/search?keyword=带火天水麻辣烫的女孩找到了)
+1. [普京胜选后谈中俄关系](https://so.toutiao.com/search?keyword=普京胜选后谈中俄关系)
 1. [卢伟冰开小米SU7出席活动](https://so.toutiao.com/search?keyword=卢伟冰开小米SU7出席活动)
-1. [环卫工在垃圾桶内捡到30万现金](https://so.toutiao.com/search?keyword=环卫工在垃圾桶内捡到30万现金)
+1. [315打假击败全国99%大学生](https://so.toutiao.com/search?keyword=315打假击败全国99%大学生)
+1. [中方祝贺普京赢得俄罗斯总统选举](https://so.toutiao.com/search?keyword=中方祝贺普京赢得俄罗斯总统选举)
+1. [TVB老戏骨陈狄克病逝](https://so.toutiao.com/search?keyword=TVB老戏骨陈狄克病逝)
 1. [初中生被杀害案嫌疑人全部抓获](https://so.toutiao.com/search?keyword=初中生被杀害案嫌疑人全部抓获)
+1. [网传雅江山火救援力量正撤出不实](https://so.toutiao.com/search?keyword=网传雅江山火救援力量正撤出不实)
+1. [三只羊就销售315点名梅菜扣肉致歉](https://so.toutiao.com/search?keyword=三只羊就销售315点名梅菜扣肉致歉)
+1. [普京胜选后谈台湾问题](https://so.toutiao.com/search?keyword=普京胜选后谈台湾问题)
+1. [湖北杀害女童男孩接受半年心理矫治](https://so.toutiao.com/search?keyword=湖北杀害女童男孩接受半年心理矫治)
+1. [多方回应规培生医院卫生间割颈自杀](https://so.toutiao.com/search?keyword=多方回应规培生医院卫生间割颈自杀)
+1. [山东一厂家公开淀粉肠生产流程](https://so.toutiao.com/search?keyword=山东一厂家公开淀粉肠生产流程)
+1. [普京掌权20年俄罗斯强大了吗](https://so.toutiao.com/search?keyword=普京掌权20年俄罗斯强大了吗)
+1. [教育部原司长王登峰一审获刑17年](https://so.toutiao.com/search?keyword=教育部原司长王登峰一审获刑17年)
+1. [天水捣辣椒大爷要累坏了](https://so.toutiao.com/search?keyword=天水捣辣椒大爷要累坏了)
+1. [环卫工捡到30万实为点钞练功券](https://so.toutiao.com/search?keyword=环卫工捡到30万实为点钞练功券)
+1. [大连遇害女童母亲发声](https://so.toutiao.com/search?keyword=大连遇害女童母亲发声)
+1. [周杰伦杭州场抢票需先充值488元](https://so.toutiao.com/search?keyword=周杰伦杭州场抢票需先充值488元)
+1. [退伍复学男生带室友爆改宿舍](https://so.toutiao.com/search?keyword=退伍复学男生带室友爆改宿舍)
+1. [普京：全世界都在嘲笑美国发生的事](https://so.toutiao.com/search?keyword=普京：全世界都在嘲笑美国发生的事)
+1. [天水麻辣烫到底有多好吃](https://so.toutiao.com/search?keyword=天水麻辣烫到底有多好吃)
+1. [外卖小哥楼顶看林俊杰演唱会](https://so.toutiao.com/search?keyword=外卖小哥楼顶看林俊杰演唱会)
+1. [普京胜选后发表8分钟感言](https://so.toutiao.com/search?keyword=普京胜选后发表8分钟感言)
+1. [天水麻辣烫三件套](https://so.toutiao.com/search?keyword=天水麻辣烫三件套)
+1. [A股三大指数均创年内新高](https://so.toutiao.com/search?keyword=A股三大指数均创年内新高)
+1. [俄罗斯共产党领袖向普京致敬](https://so.toutiao.com/search?keyword=俄罗斯共产党领袖向普京致敬)
+1. [海关在入境船舶截获2万余只活蟑螂](https://so.toutiao.com/search?keyword=海关在入境船舶截获2万余只活蟑螂)
+1. [全国房价比峰顶下降23%](https://so.toutiao.com/search?keyword=全国房价比峰顶下降23%)
+1. [老两口吵架 奶奶把爷爷的拐杖挪远](https://so.toutiao.com/search?keyword=老两口吵架+奶奶把爷爷的拐杖挪远)
+1. [淀粉肠摊主一晚0收入](https://so.toutiao.com/search?keyword=淀粉肠摊主一晚0收入)
+1. [慢镜还原林孝埈最后一圈绝杀韩国队](https://so.toutiao.com/search?keyword=慢镜还原林孝埈最后一圈绝杀韩国队)
+1. [东方甄选为代售御徽缘梅菜扣肉致歉](https://so.toutiao.com/search?keyword=东方甄选为代售御徽缘梅菜扣肉致歉)
+1. [余承东：只有卖30万以上的车才盈利](https://so.toutiao.com/search?keyword=余承东：只有卖30万以上的车才盈利)
+1. [女子山顶徒手攀爬石头手滑摔下](https://so.toutiao.com/search?keyword=女子山顶徒手攀爬石头手滑摔下)
+1. [俄男子往下水道扔烟头炸死自己](https://so.toutiao.com/search?keyword=俄男子往下水道扔烟头炸死自己)
+1. [听花酒母公司青海春天跌停](https://so.toutiao.com/search?keyword=听花酒母公司青海春天跌停)
+1. [朝鲜再次发射弹道导弹 中方回应](https://so.toutiao.com/search?keyword=朝鲜再次发射弹道导弹+中方回应)
+1. [湖北16岁少年疑被同龄人杀害](https://so.toutiao.com/search?keyword=湖北16岁少年疑被同龄人杀害)
+1. [梅西香港行退款方案公布](https://so.toutiao.com/search?keyword=梅西香港行退款方案公布)
+1. [孩子遭遇校园霸凌该怎么办](https://so.toutiao.com/search?keyword=孩子遭遇校园霸凌该怎么办)
+1. [街头实拍新能源汽车自燃现场](https://so.toutiao.com/search?keyword=街头实拍新能源汽车自燃现场)
+1. [父子景区许愿池扔吸铁石吸香火钱](https://so.toutiao.com/search?keyword=父子景区许愿池扔吸铁石吸香火钱)
+1. [女子向同事水杯投不明物质 警方调查](https://so.toutiao.com/search?keyword=女子向同事水杯投不明物质+警方调查)
+1. [台军人士强调绝不会发动“第一击”](https://so.toutiao.com/search?keyword=台军人士强调绝不会发动“第一击”)
+1. [孔子第76代孙孔令奇求婚成功](https://so.toutiao.com/search?keyword=孔子第76代孙孔令奇求婚成功)
+1. [环卫工在垃圾桶内捡到30万现金](https://so.toutiao.com/search?keyword=环卫工在垃圾桶内捡到30万现金)
 1. [山东男孩遭多人霸凌：被踹头树枝抽打](https://so.toutiao.com/search?keyword=山东男孩遭多人霸凌：被踹头树枝抽打)
 1. [每做一次CT患癌风险增加43%？假的](https://so.toutiao.com/search?keyword=每做一次CT患癌风险增加43%？假的)
 1. [湖北杀害4岁女童男孩已正常上学](https://so.toutiao.com/search?keyword=湖北杀害4岁女童男孩已正常上学)
-1. [三只羊就销售315点名梅菜扣肉致歉](https://so.toutiao.com/search?keyword=三只羊就销售315点名梅菜扣肉致歉)
-1. [中方祝贺普京赢得俄罗斯总统选举](https://so.toutiao.com/search?keyword=中方祝贺普京赢得俄罗斯总统选举)
-1. [湖北杀害女童男孩接受半年心理矫治](https://so.toutiao.com/search?keyword=湖北杀害女童男孩接受半年心理矫治)
-1. [多方回应规培生医院卫生间割颈自杀](https://so.toutiao.com/search?keyword=多方回应规培生医院卫生间割颈自杀)
-1. [全国房价比峰顶下降23%](https://so.toutiao.com/search?keyword=全国房价比峰顶下降23%)
-1. [梅西香港行退款方案公布](https://so.toutiao.com/search?keyword=梅西香港行退款方案公布)
-1. [大连遇害女童母亲发声](https://so.toutiao.com/search?keyword=大连遇害女童母亲发声)
-1. [教育部原司长王登峰一审获刑17年](https://so.toutiao.com/search?keyword=教育部原司长王登峰一审获刑17年)
-1. [东方甄选为代售御徽缘梅菜扣肉致歉](https://so.toutiao.com/search?keyword=东方甄选为代售御徽缘梅菜扣肉致歉)
-1. [女子山顶徒手攀爬石头手滑摔下](https://so.toutiao.com/search?keyword=女子山顶徒手攀爬石头手滑摔下)
-1. [天水麻辣烫三件套](https://so.toutiao.com/search?keyword=天水麻辣烫三件套)
-1. [A股三大指数均创年内新高](https://so.toutiao.com/search?keyword=A股三大指数均创年内新高)
-1. [父子景区许愿池扔吸铁石吸香火钱](https://so.toutiao.com/search?keyword=父子景区许愿池扔吸铁石吸香火钱)
-1. [天水捣辣椒大爷要累坏了](https://so.toutiao.com/search?keyword=天水捣辣椒大爷要累坏了)
-1. [俄男子往下水道扔烟头炸死自己](https://so.toutiao.com/search?keyword=俄男子往下水道扔烟头炸死自己)
-1. [315打假击败全国99%大学生](https://so.toutiao.com/search?keyword=315打假击败全国99%大学生)
 1. [幼儿园关停潮下幼师如何自救](https://so.toutiao.com/search?keyword=幼儿园关停潮下幼师如何自救)
-1. [余承东：只有卖30万以上的车才盈利](https://so.toutiao.com/search?keyword=余承东：只有卖30万以上的车才盈利)
-1. [淀粉肠摊主一晚0收入](https://so.toutiao.com/search?keyword=淀粉肠摊主一晚0收入)
-1. [普京胜选后谈中俄关系](https://so.toutiao.com/search?keyword=普京胜选后谈中俄关系)
 1. [店家否认女子自选菜吃到淋巴肉](https://so.toutiao.com/search?keyword=店家否认女子自选菜吃到淋巴肉)
-1. [听花酒母公司青海春天跌停](https://so.toutiao.com/search?keyword=听花酒母公司青海春天跌停)
 1. [中方严正敦促韩方恪守一个中国原则](https://so.toutiao.com/search?keyword=中方严正敦促韩方恪守一个中国原则)
-1. [周杰伦杭州场抢票需先充值488元](https://so.toutiao.com/search?keyword=周杰伦杭州场抢票需先充值488元)
-1. [孔子第76代孙孔令奇求婚成功](https://so.toutiao.com/search?keyword=孔子第76代孙孔令奇求婚成功)
 1. [张大仙给天蚕土豆上压力](https://so.toutiao.com/search?keyword=张大仙给天蚕土豆上压力)
-1. [外卖小哥楼顶看林俊杰演唱会](https://so.toutiao.com/search?keyword=外卖小哥楼顶看林俊杰演唱会)
 1. [乌女子：人们像狗一样被抓去当兵](https://so.toutiao.com/search?keyword=乌女子：人们像狗一样被抓去当兵)
 1. [男生被指偷文具后坠亡 警方介入](https://so.toutiao.com/search?keyword=男生被指偷文具后坠亡+警方介入)
 1. [张红文任合肥市委书记](https://so.toutiao.com/search?keyword=张红文任合肥市委书记)
 1. [律师谈世界各国刑事责任年龄](https://so.toutiao.com/search?keyword=律师谈世界各国刑事责任年龄)
-1. [朝鲜再次发射弹道导弹 中方回应](https://so.toutiao.com/search?keyword=朝鲜再次发射弹道导弹+中方回应)
 1. [法民众在巴黎游行抗议卷入俄乌冲突](https://so.toutiao.com/search?keyword=法民众在巴黎游行抗议卷入俄乌冲突)
-1. [俄罗斯共产党领袖向普京致敬](https://so.toutiao.com/search?keyword=俄罗斯共产党领袖向普京致敬)
 1. [王楚钦王曼昱滨海湾拍摄冠军照](https://so.toutiao.com/search?keyword=王楚钦王曼昱滨海湾拍摄冠军照)
 1. [市监所回应水果捞被指用鬼秤](https://so.toutiao.com/search?keyword=市监所回应水果捞被指用鬼秤)
 1. [直击胖东来招聘现场](https://so.toutiao.com/search?keyword=直击胖东来招聘现场)
@@ -62,7 +77,6 @@
 1. [普京当选俄总统](https://so.toutiao.com/search?keyword=普京当选俄总统)
 1. [5岁男孩头卡防盗窗内不幸身亡](https://so.toutiao.com/search?keyword=5岁男孩头卡防盗窗内不幸身亡)
 1. [梅西香港表演赛主办方公布退款方案](https://so.toutiao.com/search?keyword=梅西香港表演赛主办方公布退款方案)
-1. [慢镜还原林孝埈最后一圈绝杀韩国队](https://so.toutiao.com/search?keyword=慢镜还原林孝埈最后一圈绝杀韩国队)
 1. [外交部评所谓“民主峰会”](https://so.toutiao.com/search?keyword=外交部评所谓“民主峰会”)
 1. [胖东来招聘年薪最高15万](https://so.toutiao.com/search?keyword=胖东来招聘年薪最高15万)
 1. [马斯克AI大模型Grok开源](https://so.toutiao.com/search?keyword=马斯克AI大模型Grok开源)
@@ -95,7 +109,6 @@
 1. [男孩火锅店小料台用勺舀香油对嘴喝](https://so.toutiao.com/search?keyword=男孩火锅店小料台用勺舀香油对嘴喝)
 1. [林更新回应反黑亲自上场的原因](https://so.toutiao.com/search?keyword=林更新回应反黑亲自上场的原因)
 1. [普京首度回应纳瓦利内之死](https://so.toutiao.com/search?keyword=普京首度回应纳瓦利内之死)
-1. [街头实拍新能源汽车自燃现场](https://so.toutiao.com/search?keyword=街头实拍新能源汽车自燃现场)
 1. [疑似黄牛假扮演唱会保安被抓获](https://so.toutiao.com/search?keyword=疑似黄牛假扮演唱会保安被抓获)
 1. [官方：房地产市场仍处于调整转型中](https://so.toutiao.com/search?keyword=官方：房地产市场仍处于调整转型中)
 1. [楼市政策还会放松吗](https://so.toutiao.com/search?keyword=楼市政策还会放松吗)
