--- a/archives/toutiao-search/2024-03-18.md
+++ b/archives/toutiao-search/2024-03-18.md
@@ -1,59 +1,70 @@
 # 2024-03-18
 
-共 284 条
+共 293 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Mar 18 2024 20:09:15 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Mar 18 2024 21:02:52 GMT+0800 (China Standard Time) -->
+1. [证监会拟对许家印终身证券市场禁入](https://so.toutiao.com/search?keyword=证监会拟对许家印终身证券市场禁入)
 1. [多国领导人祝贺普京连任](https://so.toutiao.com/search?keyword=多国领导人祝贺普京连任)
-1. [外交部发言人上新](https://so.toutiao.com/search?keyword=外交部发言人上新)
 1. [1至2月份我国国民经济稳中有升](https://so.toutiao.com/search?keyword=1至2月份我国国民经济稳中有升)
+1. [外交部发言人上新](https://so.toutiao.com/search?keyword=外交部发言人上新)
+1. [许家印拟被罚4700万元](https://so.toutiao.com/search?keyword=许家印拟被罚4700万元)
 1. [淀粉肠中的鸡骨泥能给人吃吗](https://so.toutiao.com/search?keyword=淀粉肠中的鸡骨泥能给人吃吗)
 1. [带火天水麻辣烫的女孩找到了](https://so.toutiao.com/search?keyword=带火天水麻辣烫的女孩找到了)
-1. [普京胜选后谈中俄关系](https://so.toutiao.com/search?keyword=普京胜选后谈中俄关系)
-1. [卢伟冰开小米SU7出席活动](https://so.toutiao.com/search?keyword=卢伟冰开小米SU7出席活动)
-1. [315打假击败全国99%大学生](https://so.toutiao.com/search?keyword=315打假击败全国99%大学生)
-1. [中方祝贺普京赢得俄罗斯总统选举](https://so.toutiao.com/search?keyword=中方祝贺普京赢得俄罗斯总统选举)
-1. [TVB老戏骨陈狄克病逝](https://so.toutiao.com/search?keyword=TVB老戏骨陈狄克病逝)
+1. [普京掌权20年俄罗斯强大了吗](https://so.toutiao.com/search?keyword=普京掌权20年俄罗斯强大了吗)
+1. [山东一厂家公开淀粉肠生产流程](https://so.toutiao.com/search?keyword=山东一厂家公开淀粉肠生产流程)
+1. [全国房价比峰顶下降23%](https://so.toutiao.com/search?keyword=全国房价比峰顶下降23%)
 1. [初中生被杀害案嫌疑人全部抓获](https://so.toutiao.com/search?keyword=初中生被杀害案嫌疑人全部抓获)
 1. [网传雅江山火救援力量正撤出不实](https://so.toutiao.com/search?keyword=网传雅江山火救援力量正撤出不实)
+1. [多方回应规培生医院卫生间割颈自杀](https://so.toutiao.com/search?keyword=多方回应规培生医院卫生间割颈自杀)
 1. [三只羊就销售315点名梅菜扣肉致歉](https://so.toutiao.com/search?keyword=三只羊就销售315点名梅菜扣肉致歉)
 1. [普京胜选后谈台湾问题](https://so.toutiao.com/search?keyword=普京胜选后谈台湾问题)
-1. [湖北杀害女童男孩接受半年心理矫治](https://so.toutiao.com/search?keyword=湖北杀害女童男孩接受半年心理矫治)
-1. [多方回应规培生医院卫生间割颈自杀](https://so.toutiao.com/search?keyword=多方回应规培生医院卫生间割颈自杀)
-1. [山东一厂家公开淀粉肠生产流程](https://so.toutiao.com/search?keyword=山东一厂家公开淀粉肠生产流程)
-1. [普京掌权20年俄罗斯强大了吗](https://so.toutiao.com/search?keyword=普京掌权20年俄罗斯强大了吗)
-1. [教育部原司长王登峰一审获刑17年](https://so.toutiao.com/search?keyword=教育部原司长王登峰一审获刑17年)
-1. [天水捣辣椒大爷要累坏了](https://so.toutiao.com/search?keyword=天水捣辣椒大爷要累坏了)
+1. [戴安娜王妃弟弟谈论凯特王妃风波](https://so.toutiao.com/search?keyword=戴安娜王妃弟弟谈论凯特王妃风波)
+1. [315打假击败全国99%大学生](https://so.toutiao.com/search?keyword=315打假击败全国99%大学生)
+1. [普京胜选后发表8分钟感言](https://so.toutiao.com/search?keyword=普京胜选后发表8分钟感言)
+1. [日企CEO准备迎接日本央行加息](https://so.toutiao.com/search?keyword=日企CEO准备迎接日本央行加息)
 1. [环卫工捡到30万实为点钞练功券](https://so.toutiao.com/search?keyword=环卫工捡到30万实为点钞练功券)
 1. [大连遇害女童母亲发声](https://so.toutiao.com/search?keyword=大连遇害女童母亲发声)
-1. [周杰伦杭州场抢票需先充值488元](https://so.toutiao.com/search?keyword=周杰伦杭州场抢票需先充值488元)
-1. [退伍复学男生带室友爆改宿舍](https://so.toutiao.com/search?keyword=退伍复学男生带室友爆改宿舍)
-1. [普京：全世界都在嘲笑美国发生的事](https://so.toutiao.com/search?keyword=普京：全世界都在嘲笑美国发生的事)
-1. [天水麻辣烫到底有多好吃](https://so.toutiao.com/search?keyword=天水麻辣烫到底有多好吃)
-1. [外卖小哥楼顶看林俊杰演唱会](https://so.toutiao.com/search?keyword=外卖小哥楼顶看林俊杰演唱会)
-1. [普京胜选后发表8分钟感言](https://so.toutiao.com/search?keyword=普京胜选后发表8分钟感言)
-1. [天水麻辣烫三件套](https://so.toutiao.com/search?keyword=天水麻辣烫三件套)
-1. [A股三大指数均创年内新高](https://so.toutiao.com/search?keyword=A股三大指数均创年内新高)
-1. [俄罗斯共产党领袖向普京致敬](https://so.toutiao.com/search?keyword=俄罗斯共产党领袖向普京致敬)
-1. [海关在入境船舶截获2万余只活蟑螂](https://so.toutiao.com/search?keyword=海关在入境船舶截获2万余只活蟑螂)
-1. [全国房价比峰顶下降23%](https://so.toutiao.com/search?keyword=全国房价比峰顶下降23%)
 1. [老两口吵架 奶奶把爷爷的拐杖挪远](https://so.toutiao.com/search?keyword=老两口吵架+奶奶把爷爷的拐杖挪远)
-1. [淀粉肠摊主一晚0收入](https://so.toutiao.com/search?keyword=淀粉肠摊主一晚0收入)
-1. [慢镜还原林孝埈最后一圈绝杀韩国队](https://so.toutiao.com/search?keyword=慢镜还原林孝埈最后一圈绝杀韩国队)
-1. [东方甄选为代售御徽缘梅菜扣肉致歉](https://so.toutiao.com/search?keyword=东方甄选为代售御徽缘梅菜扣肉致歉)
-1. [余承东：只有卖30万以上的车才盈利](https://so.toutiao.com/search?keyword=余承东：只有卖30万以上的车才盈利)
-1. [女子山顶徒手攀爬石头手滑摔下](https://so.toutiao.com/search?keyword=女子山顶徒手攀爬石头手滑摔下)
-1. [俄男子往下水道扔烟头炸死自己](https://so.toutiao.com/search?keyword=俄男子往下水道扔烟头炸死自己)
-1. [听花酒母公司青海春天跌停](https://so.toutiao.com/search?keyword=听花酒母公司青海春天跌停)
-1. [朝鲜再次发射弹道导弹 中方回应](https://so.toutiao.com/search?keyword=朝鲜再次发射弹道导弹+中方回应)
-1. [湖北16岁少年疑被同龄人杀害](https://so.toutiao.com/search?keyword=湖北16岁少年疑被同龄人杀害)
+1. [外交部新发言人林剑向记者问好](https://so.toutiao.com/search?keyword=外交部新发言人林剑向记者问好)
+1. [教育部原司长王登峰一审获刑17年](https://so.toutiao.com/search?keyword=教育部原司长王登峰一审获刑17年)
+1. [天水捣辣椒大爷要累坏了](https://so.toutiao.com/search?keyword=天水捣辣椒大爷要累坏了)
+1. [TVB老戏骨陈狄克病逝](https://so.toutiao.com/search?keyword=TVB老戏骨陈狄克病逝)
+1. [中方祝贺普京赢得俄罗斯总统选举](https://so.toutiao.com/search?keyword=中方祝贺普京赢得俄罗斯总统选举)
+1. [女子向同事水杯投不明物质 警方调查](https://so.toutiao.com/search?keyword=女子向同事水杯投不明物质+警方调查)
 1. [梅西香港行退款方案公布](https://so.toutiao.com/search?keyword=梅西香港行退款方案公布)
+1. [俄男子往下水道扔烟头炸死自己](https://so.toutiao.com/search?keyword=俄男子往下水道扔烟头炸死自己)
+1. [A股三大指数均创年内新高](https://so.toutiao.com/search?keyword=A股三大指数均创年内新高)
+1. [国足抵达新加坡](https://so.toutiao.com/search?keyword=国足抵达新加坡)
+1. [退伍复学男生带室友爆改宿舍](https://so.toutiao.com/search?keyword=退伍复学男生带室友爆改宿舍)
+1. [父子景区许愿池扔吸铁石吸香火钱](https://so.toutiao.com/search?keyword=父子景区许愿池扔吸铁石吸香火钱)
+1. [林更新谈二搭赵丽颖](https://so.toutiao.com/search?keyword=林更新谈二搭赵丽颖)
+1. [听花酒母公司青海春天跌停](https://so.toutiao.com/search?keyword=听花酒母公司青海春天跌停)
+1. [周杰伦杭州场抢票需先充值488元](https://so.toutiao.com/search?keyword=周杰伦杭州场抢票需先充值488元)
+1. [东方甄选为代售御徽缘梅菜扣肉致歉](https://so.toutiao.com/search?keyword=东方甄选为代售御徽缘梅菜扣肉致歉)
+1. [海关在入境船舶截获2万余只活蟑螂](https://so.toutiao.com/search?keyword=海关在入境船舶截获2万余只活蟑螂)
+1. [普京：全世界都在嘲笑美国发生的事](https://so.toutiao.com/search?keyword=普京：全世界都在嘲笑美国发生的事)
+1. [孔子第76代孙孔令奇求婚成功](https://so.toutiao.com/search?keyword=孔子第76代孙孔令奇求婚成功)
+1. [天水麻辣烫三件套](https://so.toutiao.com/search?keyword=天水麻辣烫三件套)
+1. [余承东：只有卖30万以上的车才盈利](https://so.toutiao.com/search?keyword=余承东：只有卖30万以上的车才盈利)
+1. [外卖小哥楼顶看林俊杰演唱会](https://so.toutiao.com/search?keyword=外卖小哥楼顶看林俊杰演唱会)
+1. [日本央行开始举行货币政策会议](https://so.toutiao.com/search?keyword=日本央行开始举行货币政策会议)
+1. [慢镜还原林孝埈最后一圈绝杀韩国队](https://so.toutiao.com/search?keyword=慢镜还原林孝埈最后一圈绝杀韩国队)
+1. [朝鲜再次发射弹道导弹 中方回应](https://so.toutiao.com/search?keyword=朝鲜再次发射弹道导弹+中方回应)
+1. [男子19岁时杀人逃亡42年终落网](https://so.toutiao.com/search?keyword=男子19岁时杀人逃亡42年终落网)
+1. [赵丽颖林更新《与凤行》今日开播](https://so.toutiao.com/search?keyword=赵丽颖林更新《与凤行》今日开播)
+1. [法国民众高呼“弹劾马克龙”](https://so.toutiao.com/search?keyword=法国民众高呼“弹劾马克龙”)
+1. [普京胜选后谈中俄关系](https://so.toutiao.com/search?keyword=普京胜选后谈中俄关系)
+1. [卢伟冰开小米SU7出席活动](https://so.toutiao.com/search?keyword=卢伟冰开小米SU7出席活动)
+1. [湖北杀害女童男孩接受半年心理矫治](https://so.toutiao.com/search?keyword=湖北杀害女童男孩接受半年心理矫治)
+1. [天水麻辣烫到底有多好吃](https://so.toutiao.com/search?keyword=天水麻辣烫到底有多好吃)
+1. [俄罗斯共产党领袖向普京致敬](https://so.toutiao.com/search?keyword=俄罗斯共产党领袖向普京致敬)
+1. [淀粉肠摊主一晚0收入](https://so.toutiao.com/search?keyword=淀粉肠摊主一晚0收入)
+1. [女子山顶徒手攀爬石头手滑摔下](https://so.toutiao.com/search?keyword=女子山顶徒手攀爬石头手滑摔下)
+1. [湖北16岁少年疑被同龄人杀害](https://so.toutiao.com/search?keyword=湖北16岁少年疑被同龄人杀害)
 1. [孩子遭遇校园霸凌该怎么办](https://so.toutiao.com/search?keyword=孩子遭遇校园霸凌该怎么办)
 1. [街头实拍新能源汽车自燃现场](https://so.toutiao.com/search?keyword=街头实拍新能源汽车自燃现场)
-1. [父子景区许愿池扔吸铁石吸香火钱](https://so.toutiao.com/search?keyword=父子景区许愿池扔吸铁石吸香火钱)
-1. [女子向同事水杯投不明物质 警方调查](https://so.toutiao.com/search?keyword=女子向同事水杯投不明物质+警方调查)
 1. [台军人士强调绝不会发动“第一击”](https://so.toutiao.com/search?keyword=台军人士强调绝不会发动“第一击”)
-1. [孔子第76代孙孔令奇求婚成功](https://so.toutiao.com/search?keyword=孔子第76代孙孔令奇求婚成功)
 1. [环卫工在垃圾桶内捡到30万现金](https://so.toutiao.com/search?keyword=环卫工在垃圾桶内捡到30万现金)
 1. [山东男孩遭多人霸凌：被踹头树枝抽打](https://so.toutiao.com/search?keyword=山东男孩遭多人霸凌：被踹头树枝抽打)
 1. [每做一次CT患癌风险增加43%？假的](https://so.toutiao.com/search?keyword=每做一次CT患癌风险增加43%？假的)
@@ -82,13 +93,11 @@
 1. [马斯克AI大模型Grok开源](https://so.toutiao.com/search?keyword=马斯克AI大模型Grok开源)
 1. [集装箱夹藏劳斯莱斯入境被查](https://so.toutiao.com/search?keyword=集装箱夹藏劳斯莱斯入境被查)
 1. [特斯拉新Model 3高性能版谍照曝光](https://so.toutiao.com/search?keyword=特斯拉新Model+3高性能版谍照曝光)
-1. [林更新谈二搭赵丽颖](https://so.toutiao.com/search?keyword=林更新谈二搭赵丽颖)
 1. [长安深蓝首款硬派SUV发布](https://so.toutiao.com/search?keyword=长安深蓝首款硬派SUV发布)
 1. [春分将至农事忙](https://so.toutiao.com/search?keyword=春分将至农事忙)
 1. [直击开封王婆说媒现场](https://so.toutiao.com/search?keyword=直击开封王婆说媒现场)
 1. [近期A股市场人气回暖热点频出](https://so.toutiao.com/search?keyword=近期A股市场人气回暖热点频出)
 1. [熊猫不走蛋糕全国门店暂停接单](https://so.toutiao.com/search?keyword=熊猫不走蛋糕全国门店暂停接单)
-1. [外交部新发言人林剑向记者问好](https://so.toutiao.com/search?keyword=外交部新发言人林剑向记者问好)
 1. [卫生巾安全性遭质疑 多家品牌回应](https://so.toutiao.com/search?keyword=卫生巾安全性遭质疑+多家品牌回应)
 1. [男子酒店热水壶烧水喝完发现避孕套](https://so.toutiao.com/search?keyword=男子酒店热水壶烧水喝完发现避孕套)
 1. [女子捡包上交后却被通知做笔录](https://so.toutiao.com/search?keyword=女子捡包上交后却被通知做笔录)
