--- a/archives/toutiao-search/2024-03-18.md
+++ b/archives/toutiao-search/2024-03-18.md
@@ -1,56 +1,70 @@
 # 2024-03-18
 
-共 304 条
+共 317 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Mar 18 2024 22:00:37 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Mar 18 2024 23:00:32 GMT+0800 (China Standard Time) -->
 1. [证监会拟对许家印终身证券市场禁入](https://so.toutiao.com/search?keyword=证监会拟对许家印终身证券市场禁入)
 1. [多国领导人祝贺普京连任](https://so.toutiao.com/search?keyword=多国领导人祝贺普京连任)
 1. [南水北调工程累计调水700亿立方米](https://so.toutiao.com/search?keyword=南水北调工程累计调水700亿立方米)
-1. [杀害并侵犯12岁女孩的嫌疑人被抓获](https://so.toutiao.com/search?keyword=杀害并侵犯12岁女孩的嫌疑人被抓获)
-1. [许家印拟被罚4700万元](https://so.toutiao.com/search?keyword=许家印拟被罚4700万元)
-1. [普京胜选后发表8分钟感言](https://so.toutiao.com/search?keyword=普京胜选后发表8分钟感言)
 1. [现在小学生身高就是个迷](https://so.toutiao.com/search?keyword=现在小学生身高就是个迷)
-1. [淀粉肠中的鸡骨泥能给人吃吗](https://so.toutiao.com/search?keyword=淀粉肠中的鸡骨泥能给人吃吗)
-1. [普京掌权20年俄罗斯强大了吗](https://so.toutiao.com/search?keyword=普京掌权20年俄罗斯强大了吗)
+1. [许家印拟被罚4700万元](https://so.toutiao.com/search?keyword=许家印拟被罚4700万元)
+1. [证监会开出历史第二大罚单](https://so.toutiao.com/search?keyword=证监会开出历史第二大罚单)
+1. [学者为淀粉肠行业鸣不平](https://so.toutiao.com/search?keyword=学者为淀粉肠行业鸣不平)
+1. [华为旗舰轿车享界S9实车曝光](https://so.toutiao.com/search?keyword=华为旗舰轿车享界S9实车曝光)
+1. [普京胜选后发表8分钟感言](https://so.toutiao.com/search?keyword=普京胜选后发表8分钟感言)
+1. [山东一厂家公开淀粉肠生产流程](https://so.toutiao.com/search?keyword=山东一厂家公开淀粉肠生产流程)
 1. [外交部发言人上新](https://so.toutiao.com/search?keyword=外交部发言人上新)
-1. [初中生被杀害案嫌疑人全部抓获](https://so.toutiao.com/search?keyword=初中生被杀害案嫌疑人全部抓获)
 1. [网传雅江山火救援力量正撤出不实](https://so.toutiao.com/search?keyword=网传雅江山火救援力量正撤出不实)
 1. [三只羊就销售315点名梅菜扣肉致歉](https://so.toutiao.com/search?keyword=三只羊就销售315点名梅菜扣肉致歉)
-1. [普京胜选后谈台湾问题](https://so.toutiao.com/search?keyword=普京胜选后谈台湾问题)
-1. [陈建斌蒋勤勤带小儿子看展](https://so.toutiao.com/search?keyword=陈建斌蒋勤勤带小儿子看展)
-1. [山东一厂家公开淀粉肠生产流程](https://so.toutiao.com/search?keyword=山东一厂家公开淀粉肠生产流程)
-1. [TVB老戏骨陈狄克病逝](https://so.toutiao.com/search?keyword=TVB老戏骨陈狄克病逝)
-1. [环卫工捡到30万实为点钞练功券](https://so.toutiao.com/search?keyword=环卫工捡到30万实为点钞练功券)
-1. [主持人马卉就直播露出不雅画面致歉](https://so.toutiao.com/search?keyword=主持人马卉就直播露出不雅画面致歉)
-1. [带火天水麻辣烫的女孩找到了](https://so.toutiao.com/search?keyword=带火天水麻辣烫的女孩找到了)
-1. [大连遇害女童母亲发声](https://so.toutiao.com/search?keyword=大连遇害女童母亲发声)
-1. [全国房价比峰顶下降23%](https://so.toutiao.com/search?keyword=全国房价比峰顶下降23%)
-1. [戴安娜王妃弟弟谈论凯特王妃风波](https://so.toutiao.com/search?keyword=戴安娜王妃弟弟谈论凯特王妃风波)
+1. [普京掌权20年俄罗斯强大了吗](https://so.toutiao.com/search?keyword=普京掌权20年俄罗斯强大了吗)
 1. [恒大地产被罚41.75亿元](https://so.toutiao.com/search?keyword=恒大地产被罚41.75亿元)
-1. [315打假击败全国99%大学生](https://so.toutiao.com/search?keyword=315打假击败全国99%大学生)
+1. [淀粉肠中的鸡骨泥能给人吃吗](https://so.toutiao.com/search?keyword=淀粉肠中的鸡骨泥能给人吃吗)
+1. [普京胜选后谈台湾问题](https://so.toutiao.com/search?keyword=普京胜选后谈台湾问题)
+1. [网购百万金条 商家因金价大涨拒发货](https://so.toutiao.com/search?keyword=网购百万金条+商家因金价大涨拒发货)
+1. [英国王室称国王去世为谣言](https://so.toutiao.com/search?keyword=英国王室称国王去世为谣言)
+1. [带火天水麻辣烫的女孩找到了](https://so.toutiao.com/search?keyword=带火天水麻辣烫的女孩找到了)
+1. [TVB老戏骨陈狄克病逝](https://so.toutiao.com/search?keyword=TVB老戏骨陈狄克病逝)
+1. [陈建斌蒋勤勤带小儿子看展](https://so.toutiao.com/search?keyword=陈建斌蒋勤勤带小儿子看展)
+1. [当中华小子小虎发型照进现实](https://so.toutiao.com/search?keyword=当中华小子小虎发型照进现实)
+1. [《与凤行》不按套路出牌](https://so.toutiao.com/search?keyword=《与凤行》不按套路出牌)
+1. [退伍复学男生带室友爆改宿舍](https://so.toutiao.com/search?keyword=退伍复学男生带室友爆改宿舍)
 1. [孔子第76代孙孔令奇求婚成功](https://so.toutiao.com/search?keyword=孔子第76代孙孔令奇求婚成功)
-1. [教育部原司长王登峰一审获刑17年](https://so.toutiao.com/search?keyword=教育部原司长王登峰一审获刑17年)
+1. [法国民众高呼“弹劾马克龙”](https://so.toutiao.com/search?keyword=法国民众高呼“弹劾马克龙”)
+1. [山东省委常委张海波已赴省政府任职](https://so.toutiao.com/search?keyword=山东省委常委张海波已赴省政府任职)
+1. [人民网评淀粉肠行业塌房：要理性](https://so.toutiao.com/search?keyword=人民网评淀粉肠行业塌房：要理性)
+1. [戴安娜王妃弟弟谈论凯特王妃风波](https://so.toutiao.com/search?keyword=戴安娜王妃弟弟谈论凯特王妃风波)
+1. [315后山姆和Costco生意会更好吗](https://so.toutiao.com/search?keyword=315后山姆和Costco生意会更好吗)
+1. [班主任向全班同学“放狠话”](https://so.toutiao.com/search?keyword=班主任向全班同学“放狠话”)
+1. [95后高颜值养猪女孩：像梦一样自由](https://so.toutiao.com/search?keyword=95后高颜值养猪女孩：像梦一样自由)
 1. [东方甄选为代售御徽缘梅菜扣肉致歉](https://so.toutiao.com/search?keyword=东方甄选为代售御徽缘梅菜扣肉致歉)
+1. [315打假击败全国99%大学生](https://so.toutiao.com/search?keyword=315打假击败全国99%大学生)
+1. [街头实拍新能源汽车自燃现场](https://so.toutiao.com/search?keyword=街头实拍新能源汽车自燃现场)
+1. [教育部原司长王登峰一审获刑17年](https://so.toutiao.com/search?keyword=教育部原司长王登峰一审获刑17年)
+1. [卢伟冰开小米SU7出席活动](https://so.toutiao.com/search?keyword=卢伟冰开小米SU7出席活动)
+1. [全国房价比峰顶下降23%](https://so.toutiao.com/search?keyword=全国房价比峰顶下降23%)
+1. [环卫工捡到30万实为点钞练功券](https://so.toutiao.com/search?keyword=环卫工捡到30万实为点钞练功券)
+1. [大连遇害女童母亲发声](https://so.toutiao.com/search?keyword=大连遇害女童母亲发声)
+1. [全红婵备赛间隙和王宗源打乒乓球](https://so.toutiao.com/search?keyword=全红婵备赛间隙和王宗源打乒乓球)
+1. [天水捣辣椒大爷要累坏了](https://so.toutiao.com/search?keyword=天水捣辣椒大爷要累坏了)
+1. [伊万科维奇发现国足弊病](https://so.toutiao.com/search?keyword=伊万科维奇发现国足弊病)
+1. [饮酒司机碰见交警心虚停车躲检查](https://so.toutiao.com/search?keyword=饮酒司机碰见交警心虚停车躲检查)
+1. [天水麻辣烫到底有多好吃](https://so.toutiao.com/search?keyword=天水麻辣烫到底有多好吃)
+1. [俄男子往下水道扔烟头炸死自己](https://so.toutiao.com/search?keyword=俄男子往下水道扔烟头炸死自己)
+1. [主持人马卉就直播露出不雅画面致歉](https://so.toutiao.com/search?keyword=主持人马卉就直播露出不雅画面致歉)
+1. [证监会：许家印组织实施财务造假](https://so.toutiao.com/search?keyword=证监会：许家印组织实施财务造假)
+1. [听花酒母公司青海春天跌停](https://so.toutiao.com/search?keyword=听花酒母公司青海春天跌停)
+1. [杀害并侵犯12岁女孩的嫌疑人被抓获](https://so.toutiao.com/search?keyword=杀害并侵犯12岁女孩的嫌疑人被抓获)
+1. [初中生被杀害案嫌疑人全部抓获](https://so.toutiao.com/search?keyword=初中生被杀害案嫌疑人全部抓获)
 1. [老两口吵架 奶奶把爷爷的拐杖挪远](https://so.toutiao.com/search?keyword=老两口吵架+奶奶把爷爷的拐杖挪远)
 1. [中使馆提醒在新中国公民远离赌博](https://so.toutiao.com/search?keyword=中使馆提醒在新中国公民远离赌博)
-1. [听花酒母公司青海春天跌停](https://so.toutiao.com/search?keyword=听花酒母公司青海春天跌停)
-1. [法国民众高呼“弹劾马克龙”](https://so.toutiao.com/search?keyword=法国民众高呼“弹劾马克龙”)
-1. [华为旗舰轿车享界S9实车曝光](https://so.toutiao.com/search?keyword=华为旗舰轿车享界S9实车曝光)
-1. [俄男子往下水道扔烟头炸死自己](https://so.toutiao.com/search?keyword=俄男子往下水道扔烟头炸死自己)
 1. [男子19岁时杀人逃亡42年终落网](https://so.toutiao.com/search?keyword=男子19岁时杀人逃亡42年终落网)
 1. [慢镜还原林孝埈最后一圈绝杀韩国队](https://so.toutiao.com/search?keyword=慢镜还原林孝埈最后一圈绝杀韩国队)
 1. [海关在入境船舶截获2万余只活蟑螂](https://so.toutiao.com/search?keyword=海关在入境船舶截获2万余只活蟑螂)
-1. [卢伟冰开小米SU7出席活动](https://so.toutiao.com/search?keyword=卢伟冰开小米SU7出席活动)
 1. [中方谈跨境赌博：愿加大打击力度](https://so.toutiao.com/search?keyword=中方谈跨境赌博：愿加大打击力度)
-1. [天水麻辣烫到底有多好吃](https://so.toutiao.com/search?keyword=天水麻辣烫到底有多好吃)
-1. [315后山姆和Costco生意会更好吗](https://so.toutiao.com/search?keyword=315后山姆和Costco生意会更好吗)
 1. [孙子入伍 爷爷奶奶送别时不舍流泪](https://so.toutiao.com/search?keyword=孙子入伍+爷爷奶奶送别时不舍流泪)
-1. [天水捣辣椒大爷要累坏了](https://so.toutiao.com/search?keyword=天水捣辣椒大爷要累坏了)
 1. [新西兰总理拉克森会见王毅](https://so.toutiao.com/search?keyword=新西兰总理拉克森会见王毅)
 1. [普京：全世界都在嘲笑美国发生的事](https://so.toutiao.com/search?keyword=普京：全世界都在嘲笑美国发生的事)
-1. [伊万科维奇发现国足弊病](https://so.toutiao.com/search?keyword=伊万科维奇发现国足弊病)
-1. [退伍复学男生带室友爆改宿舍](https://so.toutiao.com/search?keyword=退伍复学男生带室友爆改宿舍)
 1. [中方祝贺普京赢得俄罗斯总统选举](https://so.toutiao.com/search?keyword=中方祝贺普京赢得俄罗斯总统选举)
 1. [女子向同事水杯投不明物质 警方调查](https://so.toutiao.com/search?keyword=女子向同事水杯投不明物质+警方调查)
 1. [幼儿园关停潮下幼师如何自救](https://so.toutiao.com/search?keyword=幼儿园关停潮下幼师如何自救)
@@ -77,7 +91,6 @@
 1. [女子山顶徒手攀爬石头手滑摔下](https://so.toutiao.com/search?keyword=女子山顶徒手攀爬石头手滑摔下)
 1. [湖北16岁少年疑被同龄人杀害](https://so.toutiao.com/search?keyword=湖北16岁少年疑被同龄人杀害)
 1. [孩子遭遇校园霸凌该怎么办](https://so.toutiao.com/search?keyword=孩子遭遇校园霸凌该怎么办)
-1. [街头实拍新能源汽车自燃现场](https://so.toutiao.com/search?keyword=街头实拍新能源汽车自燃现场)
 1. [台军人士强调绝不会发动“第一击”](https://so.toutiao.com/search?keyword=台军人士强调绝不会发动“第一击”)
 1. [环卫工在垃圾桶内捡到30万现金](https://so.toutiao.com/search?keyword=环卫工在垃圾桶内捡到30万现金)
 1. [山东男孩遭多人霸凌：被踹头树枝抽打](https://so.toutiao.com/search?keyword=山东男孩遭多人霸凌：被踹头树枝抽打)
